# sdk-python

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  README.md  RELEASING.md  SECURITY.md  SUPPORT.md  justfile  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/agents/: developer.agent.md  developer.md  docs-writer.agent.md  docs-writer.md  reviewer.agent.md  reviewer.md  tester.agent.md  tester.md
.github/instructions/: docs.instructions.md  examples.instructions.md  source.instructions.md  tests.instructions.md
.github/skills/check-and-test/: SKILL.md
.github/skills/strands-api-lookup/: SKILL.md
.github/workflows/: ci.yml  publish.yml
.kiro/skills/library-development/: SKILL.md
.kiro/skills/library-development/references/: project-map.md
.kiro/skills/library-testing/: SKILL.md
.kiro/skills/library-testing/references/: test-patterns.md
docs/: README.md  index.html
docs/configuration/: Chapter_01.md  Chapter_02.md  Chapter_03.md  Chapter_04.md  Chapter_05.md  Chapter_06.md  Chapter_07.md  Chapter_08.md  Chapter_09.md  Chapter_10.md  Chapter_11.md  Chapter_12.md  Chapter_13.md  Chapter_14.md  Chapter_15.md  Chapter_16.md  Chapter_17.md  Chapter_18.md  Chapter_19.md  Quick_Recipes.md  README.md
docs/img/: index.html
examples/: README.md  TEMPLATE_EXAMPLE.md
examples/01_minimal/: README.md  config.yaml  main.py
examples/02_vars_and_anchors/: README.md  config.yaml  main.py
examples/03_tools/: README.md  config.yaml  main.py  tools.py
examples/04_session/: README.md  config.yaml  main.py
examples/05_hooks/: README.md  config.yaml  custom_tools.py  hooks.py  main.py
examples/06_mcp/: README.md  config.yaml  main.py  server.py
examples/07_delegate/: README.md  config.yaml  main.py
examples/08_swarm/: README.md  config.yaml  main.py
examples/09_graph/: README.md  config.yaml  main.py
examples/10_nested/: README.md  config.yaml  main.py
examples/11_multi_file_config/: README.md  agents.yaml  base.yaml  main.py
examples/12_streaming/: README.md  config.yaml  main.py
examples/13_graph_conditions/: README.md  conditions.py  config.yaml  main.py
examples/14_agent_factory/: README.md  config.yaml  factory.py  main.py
examples/15_plugins/: README.md  config.yaml  main.py  plugins.py
examples/15_plugins/skills/conventional-commits/: SKILL.md
src/strands_compose/: __init__.py  cli.py  exceptions.py  manifest.py  models.py  types.py  utils.py  wire.py
src/strands_compose/config/: __init__.py  interpolation.py  schema.py
src/strands_compose/config/loaders/: __init__.py  helpers.py  loaders.py  validators.py
src/strands_compose/config/resolvers/: __init__.py  agents.py  config.py  conversation_manager.py  mcp.py  (+4 more)
src/strands_compose/converters/: __init__.py  base.py  openai.py  raw.py
src/strands_compose/hooks/: __init__.py  event_publisher.py  max_calls_guard.py  stop_guard.py  tool_name_sanitizer.py
src/strands_compose/mcp/: README.md  __init__.py  client.py  lifecycle.py  server.py  transports.py
src/strands_compose/renderers/: __init__.py  ansi.py  base.py
src/strands_compose/startup/: __init__.py  report.py  validator.py
src/strands_compose/tools/: __init__.py  extractors.py  loaders.py  wrappers.py
tasks/: README.md  check.just  clean.just  commit.just  format.just  install.just  release.just  test.just
tests/: __init__.py  conftest.py  factories.py
tests/cli/: test_cli.py  test_startup.py
tests/contract/: shape_baseline.json  test_shape.py
tests/examples/: test_examples_smoke.py
tests/fakes/: __init__.py  strands.py
tests/integration/: conftest.py  test_full_pipeline.py  test_load_config.py  test_session_lifecycle_events.py
tests/integration/fixtures/: complex_full.yaml  minimal.yaml  multi_agent_delegate.yaml  nested_orchestration.yaml  swarm.yaml  with_hooks.yaml  with_model.yaml  with_session_manager.yaml  with_vars.yaml
tests/parse/: test_helpers.py  test_interpolation.py
tests/pipeline/: conftest.py  test_examples.py  test_load.py
tests/pipeline/fixtures/: graph.yaml  multi_source_base.yaml  multi_source_extra.yaml  nested.yaml
tests/property/: test_interpolation.py  test_merge.py  test_sanitize_keys.py
tests/resolve/: test_agents.py  test_delegation.py  test_hooks.py  test_import.py  test_mcp.py  test_models.py  test_orchestrations.py  test_plugins.py  test_session_manager.py  test_tools.py
tests/runtime/: test_converters.py  test_event_publisher_callback.py  test_event_queue.py  test_event_stream.py  test_guards.py  test_manifest.py  test_mcp_lifecycle.py  test_renderers.py  test_result_extraction.py
tests/schema/: test_planner.py  test_references.py  test_validation.py
tests/unit/: __init__.py  conftest.py  test_cli.py  test_concurrency.py  test_event_queue.py  test_exception_usage.py  test_exceptions.py  test_exports.py  test_golden_outputs.py  test_manifest.py  test_tools.py  test_tools_module.py  test_types.py  test_utils.py  test_wire.py
tests/unit/config/: test_edge_cases.py  test_interpolation.py  test_schema.py
tests/unit/converters/: test_base.py  test_openai.py  test_raw.py
tests/unit/hooks/: test_edge_cases.py  test_event_publisher.py  test_max_calls_guard.py  test_stop_guard.py  test_tool_name_sanitizer.py
tests/unit/mcp/: test_client.py  test_init.py  test_lifecycle.py  test_server.py  test_transports.py
tests/unit/models/: test_models.py
tests/unit/renderers/: test_ansi.py  test_base.py
tests/unit/startup/: test_report.py  test_validator.py
(+20 files in other folders)
